--- a/02-Methods.Rmd
+++ b/02-Methods.Rmd
@@ -52,6 +52,8 @@ Ancestral allele - The ancestral allele was used as annotated from the 1000 Geno
 
 When the VCF files were loaded into the R package PopGenome [@Pfeifer2014] populations were identified using panel files which were whitespace delimited files with sample id, population, and super population as the columns. The outgroup population was set to be that of the Ancestor sample.
 
+for \gls{td}, \gls{fwh}, \gls{fld}, \gls{flf}, and \gls{ze} a significance threshold was created using the empirical distribution with significance being designated as being in the either the 1st or 99th percentile, and negative for the lower tail, or positive for the upper tail.
+
 #### SelectionTools {#selectionTools}
 
 SelectionTools v1.1 [@Cadzow2014] was used to generate the following statistics as per Table \@ref(tab:seltoolStats)
@@ -77,6 +79,20 @@ Table: (\#tab:seltoolStats)
 | S |Variscan| 30 kb | |
 | mean F~ST~ | Vcftools| | |
 | _Haplotype Based_ | | | |
+| sL by allele | Selscan | | |
+| sL1 | Selscan | | |
+| unstandardised nSL |Selscan | | |
+| standardised nSL |Selscan | | |
+| ihh by allele | Selscan | | |
+| unstandardised iHS | Selscan | | |
+| standardised iHS | Selscan norm | | |
+| iHH by population 1 | Selscan | | |
+| iHH population 2 | Selscan | | |
+| unstandardised XP-EHH | Selcan | | |
+| standardised XP-EHH | Selscan norm | | |
+| _Frequency_ | | | |
+| Minor allele frequency | | | |
+| Derived allele frequency | | | |
 
 <!--
 - Tajima's D (Vcftools) [@Tajima1989]|
@@ -91,22 +107,9 @@ Table: (\#tab:seltoolStats)
 
 Haplotype based
 
-- sL0
-- sL1
-- unstandardised nSL
-- standardised nSL
-- ihh0
-- ihh1
-- unstandardised iHS
-- standardised iHS
-- iHH population 1
-- iHH population 2
-- unstandardised XP-EHH
-- standardised XP-EHH
+- 
 
-Frequency
-- Minor allele frequency
-- Derived allele frequency
+
 
 Gene
 - Ka/Ks
