--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -98,7 +98,7 @@ pander::pandoc.table(m, split.cells = 30 , caption = "(\\#tab:gwascatref) GWAS c
 
 #### Whole Chromosome Clustering
 
-Clustering on the full chromosome results for all chromosomes from PopGenome (Figure \@ref(fig:multichrplot)) did not group the populations of each super population together, with the exception of \gls{fwh}, which grouped all super populations although split the \gls{amr} into two pairs. \gls{td} grouped the \gls{eur} and most of the \gls{sas} super populations, and had smaller sub-super population groupings of two to three populations. \Gls{cim}, \gls{nzm}, and \gls{sam} were grouped with two \gls{amr} populations, \gls{pel} and \gls{mxl}, and this group was the least similar to the others. There was no clear pattern to the clustering order for both Fu and Li's _D_ and _F_, although \gls{flf} did have a few small groups of the same super population of no more than 3 individuals populations. The \gls{cim} and \gls{sam} populations were grouped together in both of statistics. \Gls{ze} clustered the \gls{afr} populations together and this cluster was the least similar to the other populations. There was also a grouping of the \gls{eas} populations which had the Western Polynesian populations part of it.
+Clustering on the full chromosome results for all chromosomes from PopGenome (Figure \@ref(fig:multichrplot)) did not group the populations of each super population together, with the exception of \gls{fwh}, which grouped all super populations although split the \gls{amr} into two pairs. \gls{td} grouped the \gls{eur} and most of the \gls{sas} super populations, and had smaller sub-super population groupings of two to three populations. \Gls{cim}, \gls{nzm}, and \gls{sam} were grouped with two \gls{amr} populations, \gls{pel} and \gls{mxl}, and this group was the least similar to the others. There was no clear pattern to the clustering order for both Fu and Li's _D_ and _F_, although \gls{flf} did have a few small groups of the same super population of no more than three individuals populations. The \gls{cim} and \gls{sam} populations were grouped together in both of statistics. \Gls{ze} clustered the \gls{afr} populations together and this cluster was the least similar to the other populations. There was also a grouping of the \gls{eas} populations which had the Western Polynesian populations part of it.
 
 <!--
 - td had eur cluste, nzm-cim, most of a sas, but the other populations are in groups of 2-3, the pol group is quite disimilar to the rest
@@ -150,7 +150,7 @@ some stats about the largest and smallest fsts and focus on the Polynesians
 
 ### Hierarchical Clustering of Distribution Extremes
 
-Hierarchical clustering for each selection test statistic using the most extreme 1% windows by value for the frequency spectrum based methods and proportion of region overlap for the haplotypic methods grouped inidiviual populations into each of their super population groups was only done by \gls{fwh}. If an allowance is made for the two \gls{amr} populations to be grouped with the \gls{eur} populations, as in the chromosomal F~ST~ clustering, then both haplotypic methods and 6 tails of the frequency spectrum based methods clustered super populations into their respective super populations.  
+Hierarchical clustering for each selection test statistic using the most extreme 1% windows by value for the frequency spectrum based methods and proportion of region overlap for the haplotypic methods grouped inidiviual populations into each of their super population groups was only done by \gls{fwh}. If an allowance is made for the two \gls{amr} populations to be grouped with the \gls{eur} populations, as in the chromosomal F~ST~ clustering, then both haplotypic methods and six tails of the frequency spectrum based methods clustered super populations into their respective super populations.  
 <!-- check the mean same as the mean of means -->
 There were differing numbers of windows used for each population (Table \@ref(tab:windowTable)). The mean number of windows per population was `r create_windowTable() %>% summarise(round(mean(mean), digits = 1))` (sd `r create_windowTable() %>% summarise(round(sd(mean), digits = 1))`) with a minimum of `r create_windowTable() %>% summarise(min(min))` and a maximum of `r create_windowTable() %>% summarise(max(max))` 
 
@@ -391,23 +391,23 @@ colnames(rand_tab_pander) <- c('Super\nPopulation', 'Min','Mean','Std. Dev','Max
 pander::pandoc.table(rand_tab_pander, caption = '(\\#tab:randtab) *Summary of proportion of individual populations assigned to their super population cluster.* Min is the minimum proportion for the cluster from all iterations. Mean is the mean proportion of the maximum cluster proportions for all iterations. Max is the maximum proportion from all iterations. Prop50 is the number of times at least 50% of the super population was clustered together, expressed as a percentage. Total complete is the number of times the super population had all of its individual populations assigned the same cluster.', justify = c("left",rep("right", NCOL(rand_tab_pander)-1)), keep.line.breaks = TRUE)
 ```
 
-<!-- why does the Eur never produce a max prop of 1?-->
-
-To assess the likelihood of obtaining the super population clusters by chance, 10,000 iterations of random resampling of 2500 windows per population was undertaken and then clustered. The maximum proportion of populations being clustered into their designated super population was then calculated when the tree was cut to have 6 groups. The mean proportion of populations grouped into their super population was less than 0.5 for all super populations (Table \@ref(tab:randtab)). It is likely the reason for this is the small likelihood (XXX <!--(2500/~250000 per pop)-->) of having regions in common and the clustering algorithm will not work effectively at the extremes of similarity, i.e. no regions in common or all regions in common between populations.
-
-Not a single random draw grouped the all individual populations into all of their respective super populations. Only the populations of the \gls{afr} and \gls{eur} super populations did not each get fully grouped into a cluster. Grouping at least 50% of a super population was at best `r round(rand_tab %>% summarise(max(prop50)), digits = 0)`% of the draws but for the larger super populations (\gls{afr}, \gls{eas}, \gls{eur}, and \gls{sas}) it was on average `r round(rand_tab %>% filter(!super %in% c('POL','AMR'))%>% summarise(mean(prop50)), digits = 0)`% of the draws. There were only `r bind_rows(lapply(td_random, function(x){ x[['super_prop']] %>% spread('super', 'max_prop')})) %>% filter(POL >= 2/4, EUR >= 3/6, EAS >= 3/5, AFR >= 3/6, SAS >= 3/5) %>% arrange(POL) %>% NROW()` iterations that had all super populations each having half or more of their individual populations assigned the same group.
-
-
-The exclusivity of the random draws was 
-
-
 ```{r, eval = FALSE}
-#calculate the mean proportion for the population clusters across all iterations
-# remove 0 because they aren't actually a cluster
-bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$pop_clust_prop %>% data.frame()%>% mutate(clust = row.names(.))})) %>% select(-clust) %>% gather("pop","prop") %>% filter(prop > 0) %>% group_by(pop) %>% summarise(min(prop), quantile(prop, 0.25), mean(prop),sd(prop), median(prop),quantile(prop, 0.75) , max(prop))
+#count the number of times the Polynesians were all grouped into an exclusive cluster
+a <- c()
+b<- c()
+for(i in seq_along(td_random)){
+  if(td_random[[i]]$tab %>% data.frame %>% spread(Var2, Freq) %>% select(-1) %>% filter(POL == 4 & rowSums(.)== 4) %>% NROW() > 0){a <- c(a,i)
+  }
+  if(td_random[[i]]$super_prop %>% filter(super == "POL" & max_prop == 1) %>% NROW() > 0){b <- c(b,i)
+  }
+}
 
-bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$pop_clust_prop %>% data.frame()%>% mutate(clust = row.names(.))})) %>% select(-clust) %>% gather("pop","prop") %>% filter(prop > 0) %>% group_by(pop) %>% ggplot(., aes(x =pop, y = prop)) + geom_violin()
+
+
+
+
 ```
+
 
 ```{r}
 #exclusivity
@@ -419,7 +419,7 @@ excl_tab
 # 
 # bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$exclusivity %>% data.frame()%>% mutate(pop = row.names(.))})) %>% t()%>% select(-clust) %>% gather("pop","prop") %>% filter(prop > 0) %>% group_by(pop) %>% summarise(min(prop), quantile(prop, 0.25), mean(prop),sd(prop), median(prop),quantile(prop, 0.75) , max(prop))
 
-
+#count how many iterations a super population was in an exclusive cluster
 #excl_tally <- bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$exclusivity  %>% data.frame %>% mutate(super = row.names(.)) %>% gather(cluster,prop, 1:(NCOL(.)-1)) %>%filter(prop == 1) %>%  mutate(iter = x)})) %>% group_by(super) %>% tally()
 #saveRDS(excl_tally, 'data/04-excl_tally.RDS')
 excl_tally <- readRDS('data/04-excl_tally.RDS')
@@ -428,6 +428,24 @@ excl_tally
 #bind_rows(lapply(seq_along(td_random)[1:10], function(x){td_random[[x]]$exclusivity %>% t() %>% data.frame %>% mutate_all(., funs(replace(., . == 0, NA))) %>% summarise_all(., funs(mean(., na.rm=TRUE), min(., na.rm = TRUE), max(., na.rm = TRUE)))})) %>% summarise_all(funs(min,mean,max)) %>% t %>%data.frame() %>% select(value = 1)  %>% mutate(pop = sapply(row.names(.), function(x){strsplit(x, '_')[[1]][1]}), stat1 = sapply(row.names(.), function(x){strsplit(x, '_')[[1]][2]}), stat2 = sapply(row.names(.), function(x){strsplit(x, '_')[[1]][3]}) ) %>% filter(stat1 == stat2) %>% select(-stat2) %>% spread(stat1, value)
 
 ```
+
+
+<!-- why does the Eur never produce a max prop of 1?-->
+
+To assess the likelihood of obtaining the super population clusters by chance, 10,000 iterations of random resampling of 2500 windows per population was undertaken and then clustered. The maximum proportion of populations being clustered into their designated super population was then calculated when the tree was cut to have 6 groups. The mean proportion of populations grouped into their super population was less than 0.5 for all super populations (Table \@ref(tab:randtab)). It is likely the reason for this is the small likelihood (XXX <!--(2500/~250000 per pop)-->) of having regions in common and the clustering algorithm will not work effectively at the extremes of similarity, i.e. no regions in common or all regions in common between populations.
+
+Not a single random draw grouped the all individual populations into all of their respective super populations. Only the populations of the \gls{afr} and \gls{eur} super populations did not each get fully grouped into a cluster. Grouping at least 50% of a super population was at best `r round(rand_tab %>% summarise(max(prop50)), digits = 0)`% of the draws but for the larger super populations (\gls{afr}, \gls{eas}, \gls{eur}, and \gls{sas}) it was on average `r round(rand_tab %>% filter(!super %in% c('POL','AMR'))%>% summarise(mean(prop50)), digits = 0)`% of the draws. There were only `r bind_rows(lapply(td_random, function(x){ x[['super_prop']] %>% spread('super', 'max_prop')})) %>% filter(POL >= 2/4, EUR >= 3/6, EAS >= 3/5, AFR >= 3/6, SAS >= 3/5) %>% arrange(POL) %>% NROW()` iterations that had all super populations each having half or more of their individual populations assigned the same group. The mean exclusivity of the random draws was low, ranging from `r min(excl_tab$mean) %>% sprintf('%.1f', .)` to `r max(excl_tab$mean) %>% sprintf('%.1f', .)` and there were no iterations in which the Polynesian populations were all grouped togther as a Polynesian exclusive cluster.
+
+
+```{r, eval = FALSE}
+#calculate the mean proportion for the population clusters across all iterations
+# remove 0 because they aren't actually a cluster
+bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$pop_clust_prop %>% data.frame()%>% mutate(clust = row.names(.))})) %>% select(-clust) %>% gather("pop","prop") %>% filter(prop > 0) %>% group_by(pop) %>% summarise(min(prop), quantile(prop, 0.25), mean(prop),sd(prop), median(prop),quantile(prop, 0.75) , max(prop))
+
+bind_rows(lapply(seq_along(td_random), function(x){td_random[[x]]$pop_clust_prop %>% data.frame()%>% mutate(clust = row.names(.))})) %>% select(-clust) %>% gather("pop","prop") %>% filter(prop > 0) %>% group_by(pop) %>% ggplot(., aes(x =pop, y = prop)) + geom_violin()
+```
+
+
 
 
 
@@ -461,7 +479,7 @@ sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_SAM
 Clustering on the proportion of shared regions for both \gls{ihs} (Figure \@ref(fig:ihsclust)) and \gls{nsl} (Figure \@ref(fig:nslclust)) grouped the individual populations into their super populations, with the exception of the \gls{amr} populations which were split into two separate groups. Both \gls{ihs} and \gls{nsl} gave similar groupings and had similar proportions shared.
 
 
-Using the \gls{ihs} significant regions, the populations with the least regions shared between was \gls{asw} and \gls{cim}, with `r sprintf("%.1f",mat_ihs['POL_CIM','AFR_ASW'] *100)`%  shared. The populations that had the largest proportion of region shared was \gls{nzc} and \gls{ceu} with `r sprintf("%.1f",mat_ihs['EUR_NZC','EUR_CEU'] *100)`% shared. Looking specifically at the proportion of regions shared between Polynesian populations, for the Eastern Polynesians there was \gls{nzm} with `r (mat_ihs[rownames(mat_ihs) == "POL_CIM", colnames(mat_ihs) == "POL_NZM"] * 100) %>% round(., digits = 2)`% of regions shared \gls{cim}, and \gls{cim} shared `r (mat_ihs[rownames(mat_ihs) == "POL_NZM", colnames(mat_ihs) == "POL_CIM"] * 100) %>% round(., digits = 2)`% of regions with \gls{nzm}. In the Western Polynesian populations, \gls{sam} shared `r (mat_ihs[rownames(mat_ihs) == "POL_TON", colnames(mat_ihs) == "POL_SAM"] * 100) %>% round(., digits = 2)`% of regions with \gls{ton}, but \gls{ton}  shared `r (mat_ihs[rownames(mat_ihs) == "POL_SAM", colnames(mat_ihs) == "POL_TON"] * 100) %>% round(., digits = 2)`% of regions with \gls{sam}. Out of all the significant \gls{ihs} regions for Polynesian populations, only  `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(GenomicRanges::intersect(gr_ihs[gr_ihs$pop == 'POL_CIM'], gr_ihs[gr_ihs$pop == "POL_NZM"]), GenomicRanges::intersect(gr_ihs[gr_ihs$pop == 'POL_SAM'], gr_ihs[gr_ihs$pop == "POL_TON"])))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% round(., digits = 2)`% were in common with all Polynesian populations. The Eastern Polynesians made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM","POL_CIM")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) *100) %>% round(.,2)`% of the regions from all of the Polynesian populations while the Western Polynesian populations made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_SAM","POL_TON")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% round(., digits = 2)`%.
+Using the \gls{ihs} significant regions, the populations with the least regions shared between was \gls{asw} and \gls{cim}, with `r sprintf("%.1f",mat_ihs['POL_CIM','AFR_ASW'] *100)`%  shared. The populations that had the largest proportion of region shared was \gls{nzc} and \gls{ceu} with `r sprintf("%.1f",mat_ihs['EUR_NZC','EUR_CEU'] *100)`% shared. Looking specifically at the proportion of regions shared between Polynesian populations, for the Eastern Polynesians there was \gls{nzm} with `r (mat_ihs[rownames(mat_ihs) == "POL_CIM", colnames(mat_ihs) == "POL_NZM"] * 100) %>% sprintf('%.1f',.)`% of regions shared \gls{cim}, and \gls{cim} shared `r (mat_ihs[rownames(mat_ihs) == "POL_NZM", colnames(mat_ihs) == "POL_CIM"] * 100) %>% sprintf('%.1f',.)`% of regions with \gls{nzm}. In the Western Polynesian populations, \gls{sam} shared `r (mat_ihs[rownames(mat_ihs) == "POL_TON", colnames(mat_ihs) == "POL_SAM"] * 100) %>% sprintf('%.1f',.)`% of regions with \gls{ton}, but \gls{ton}  shared `r (mat_ihs[rownames(mat_ihs) == "POL_SAM", colnames(mat_ihs) == "POL_TON"] * 100) %>% sprintf('%.1f',.)`% of regions with \gls{sam}. Out of all the significant \gls{ihs} regions for Polynesian populations, only  `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(GenomicRanges::intersect(gr_ihs[gr_ihs$pop == 'POL_CIM'], gr_ihs[gr_ihs$pop == "POL_NZM"]), GenomicRanges::intersect(gr_ihs[gr_ihs$pop == 'POL_SAM'], gr_ihs[gr_ihs$pop == "POL_TON"])))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)`% were in common with all Polynesian populations. The Eastern Polynesians made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM","POL_CIM")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) *100) %>% sprintf('%.1f',.)`% of the regions from all of the Polynesian populations while the Western Polynesian populations made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_SAM","POL_TON")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)`%.
 
 
 
@@ -498,15 +516,15 @@ The Polynesian populations were clustered together with a high proportion of sha
 ihs_dendro_plot()
 ```
 
-(ref:ihsclust) _\gls{ihs} Clustering_ A. Dendrogram from hierachical clustering based on proportion of \gls{ihs} regions shared between populations Coloured by super population. B. Heatmap showing the proportion of \gls{ihs} regions shared.
+(ref:ihsclust) _\gls{ihs} Clustering_ A. Dendrogram from hierachical clustering based on proportion of significant \gls{ihs} regions shared between populations Coloured by super population. B. Heatmap showing the proportion of significant \gls{ihs} regions shared.
 
 ```{r nslclust, fig.cap='(ref:nslclust)', echo = FALSE}
 nsl_dendro_plot()
 ```
 
-(ref:nslclust) _\gls{nsl} Clustering_ A. Dendrogram from hierachical clustering based on proportion of \gls{nsl} regions shared between populations. Coloured by super population. B. Heatmap showing the proportion of \gls{nsl} regions shared.
+(ref:nslclust) _\gls{nsl} Clustering_ A. Dendrogram from hierachical clustering based on proportion of significant \gls{nsl} regions shared between populations. Coloured by super population. B. Heatmap showing the proportion of significant \gls{nsl} regions shared.
 
-nsl
+<!-- nSL -->
 
 ```{r}
 mat_nsl <- readRDS('~/data/NZ_coreExome_1kgp/haplotype/nsl_clustered_dist_mat-6-7-2017.RDS')
@@ -529,24 +547,10 @@ mean_super_share_nsl <- mean(unlist(sp_list))
 rm(super_pops, sp_list)
 ```
 
-There was a similar amount of 
-
-NZM `r (mat_nsl[rownames(mat_nsl) == "POL_CIM", colnames(mat_nsl) == "POL_NZM"] * 100) %>% round(., digits = 2)`% of regions with CIM, whereas CIM shared `r (mat_nsl[rownames(mat_nsl) == "POL_NZM", colnames(mat_nsl) == "POL_CIM"] * 100) %>% round(., digits = 2)`% of regions with NZM
+The clustering results using regions of significant \gls{nsl} gave the same groupings as \gls{ihs}. This was similarity was also seen with the differences in indiviual populations, where \gls{nzc} and \gls{ceu} had the highest percentage of shared regions at `r sprintf("%.1f",mat_nsl['EUR_NZC','EUR_CEU'] *100)`%. \Gls{nzm} and \gls{gwd} shared the lowest percentage of regions at `r sprintf("%.1f",mat_nsl['POL_NZM','AFR_GWD'] *100)`%. The percentage of the significanct \gls{nsl} regions the Polynesian populations shared with AMR was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AMR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, AFR  was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AFR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, EAS   was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, EUR was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EUR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, and SAS was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('SAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%. This was higher than the mean (`r sprintf("%.1f",mean_super_share_nsl * 100)`%) for \gls{eas}, but lower for the other super populations for proportion of region sharing between super populations. 
 
 
-SAM shared `r (mat_nsl[rownames(mat_nsl) == "POL_TON", colnames(mat_nsl) == "POL_SAM"] * 100) %>% round(., digits = 2)`% of regions with TON, but TON shared `r (mat_nsl[rownames(mat_nsl) == "POL_SAM", colnames(mat_nsl) == "POL_TON"] * 100) %>% round(., digits = 2)`% of regions with SAM
-
-
-The Eastern Polynesians made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM","POL_CIM")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) *100) %>% round(.,2)`% of the regions from all of the Polynesian populations while the Western Polynesian populations made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_SAM","POL_TON")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% round(., digits = 2)`
-
-Out of all the regions for Polynesian populations only  `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_CIM'], gr_nsl[gr_nsl$pop == "POL_NZM"]), GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_SAM'], gr_nsl[gr_nsl$pop == "POL_TON"])))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% round(., digits = 2)`% was in common.
-
-The amount of region the Polynesian populations shared with AMR was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AMR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% round(., digits = 2)`%, AFR  was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AFR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% round(., digits = 2)`%, EAS   was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% round(., digits = 2)`%, EUR was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EUR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% round(., digits = 2)`%, and SAS was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('SAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% round(., digits = 2)`%. This was lower than the mean (`r sprintf("%.1f",mean_super_share_nsl * 100)`%) for proportion of regions sharing between the other super populations. 
-
-
-This was dis/similar in \gls{nsl} where \gls{nzc} and \gls{ceu} had the highest percentage of shared regions at `r sprintf("%.1f",mat_nsl['EUR_NZC','EUR_CEU'] *100)`%. \Gls{nzm} and \gls{gwd} shared the lowest percentage of regions at `r sprintf("%.1f",mat_nsl['POL_NZM','AFR_GWD'] *100)`%. 
-
-The Polynesian populations were clustered together with a high proportion of shared significant regions. The Eastern Polynesians had on average `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>%  filter(pop1!=pop2, (pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_CIM","POL_NZM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`% in common, and the Western Polynesians had `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>%  filter(pop1!=pop2, (pop1 %in% c("POL_TON","POL_SAM") & pop2 %in% c("POL_TON","POL_SAM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`%. However between the Eastern and Western populations was on average `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter((pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_TON","POL_SAM")) | (pop2 %in% c("POL_CIM","POL_NZM") & pop1 %in% c("POL_TON","POL_SAM")))  %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`%. 
+The Polynesian populations were clustered together with a high proportion of shared significant regions. The Eastern Polynesians had on average `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>%  filter(pop1!=pop2, (pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_CIM","POL_NZM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`% in common. NZM `r (mat_nsl[rownames(mat_nsl) == "POL_CIM", colnames(mat_nsl) == "POL_NZM"] * 100) %>% sprintf('%.1f',.)`% of regions with CIM, whereas CIM shared `r (mat_nsl[rownames(mat_nsl) == "POL_NZM", colnames(mat_nsl) == "POL_CIM"] * 100) %>% sprintf('%.1f',.)`% of regions with NZM. The Western Polynesians had `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>%  filter(pop1!=pop2, (pop1 %in% c("POL_TON","POL_SAM") & pop2 %in% c("POL_TON","POL_SAM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`%. SAM shared `r (mat_nsl[rownames(mat_nsl) == "POL_TON", colnames(mat_nsl) == "POL_SAM"] * 100) %>% sprintf('%.1f',.)`% of regions with TON, but TON shared `r (mat_nsl[rownames(mat_nsl) == "POL_SAM", colnames(mat_nsl) == "POL_TON"] * 100) %>% sprintf('%.1f',.)`% of regions with SAM. However between the Eastern and Western populations was on average `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter((pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_TON","POL_SAM")) | (pop2 %in% c("POL_CIM","POL_NZM") & pop1 %in% c("POL_TON","POL_SAM")))  %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`%. Of the regions from all of the Polynesian populations, the Western Polynesian populations made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_SAM","POL_TON")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)`%. The Eastern Polynesians made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM","POL_CIM")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) *100) %>% sprintf('%.1f',.)`%.  The total percentage of regions common for all Polynesian populations was  `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_CIM'], gr_nsl[gr_nsl$pop == "POL_NZM"]), GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_SAM'], gr_nsl[gr_nsl$pop == "POL_TON"])))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)`%.
 
 
 ### Disease Associated Gene Clustering {#genelistcluster}
@@ -827,11 +831,11 @@ bind_rows(lapply(names(prop_list), function(x){prop_list[[x]]$super_prop %>%  sp
 bind_rows(list(
   bind_rows(lapply(names(gout[[2]]), function(x){gout[[2]][[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1))})) %>% mutate(Disease = 'Urate/Gout'),
 
-bind_rows(lapply(names(t2d[[2]]), function(x){gout[[2]][[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1))})) %>% mutate(Disease = '\\gls{t2d}'),
+bind_rows(lapply(names(t2d[[2]]), function(x){t2d[[2]][[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1))})) %>% mutate(Disease = '\\gls{t2d}'),
 
-bind_rows(lapply(names(obesity[[2]]), function(x){gout[[2]][[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1))})) %>% mutate(Disease = 'Obesity'),
+bind_rows(lapply(names(obesity[[2]]), function(x){obesity[[2]][[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1))})) %>% mutate(Disease = 'Obesity'),
 
-bind_rows(lapply(names(metsyn[[2]]), function(x){gout[[2]][[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1))})) %>% mutate(Disease = 'Metabolic Syndrome')
+bind_rows(lapply(names(metsyn[[2]]), function(x){metsyn[[2]][[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1))})) %>% mutate(Disease = 'Metabolic Syndrome')
 )) %>% mutate_if(., is.numeric, funs(sprintf('%.2f',.)))%>%  select(stat, "Gene List" = Disease, everything()) %>% data.frame %>%  pander::pandoc.table()
 
 
@@ -841,5 +845,18 @@ bind_rows(lapply(names(metsyn[[2]]), function(x){gout[[2]][[x]]$exclusivity %>% 
 ```{r, results = 'asis'}
 #exclusivity
 bind_rows(lapply(names(prop_list), function(x){prop_list[[x]]$exclusivity %>% data.frame%>% mutate(pop = row.names(.)) %>% gather("cluster","prop",1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean_prop = mean(prop)) %>% spread(pop, mean_prop) %>% mutate(stat = x) %>% select(NCOL(.), 1:(NCOL(.)-1)) })) %>% mutate_at(., vars(-stat), funs(sprintf("%.3f",.))) %>%  data.frame %>% pander::pandoc.table(., caption = 'Exclusivity')
+```
+
+```{r}
+bind_rows(list(
+  bind_rows(lapply(names(gout[[2]]), function(x){gout[[2]][[x]]$super_prop %>% spread(super, max_prop)})) %>% mutate(Disease = 'Urate/Gout'),
+
+bind_rows(lapply(names(t2d[[2]]), function(x){t2d[[2]][[x]]$super_prop %>% spread(super, max_prop)})) %>% mutate(Disease = '\\gls{t2d}'),
+
+bind_rows(lapply(names(obesity[[2]]), function(x){obesity[[2]][[x]]$super_prop %>% spread(super, max_prop)})) %>% mutate(Disease = 'Obesity'),
+
+bind_rows(lapply(names(metsyn[[2]]), function(x){metsyn[[2]][[x]]$super_prop %>% spread(super, max_prop)})) %>% mutate(Disease = 'Metabolic Syndrome')
+)) %>% mutate_if(., is.numeric, funs(sprintf('%.2f',.)))%>%  select(stat, "Gene List" = Disease, everything()) %>% data.frame %>%  pander::pandoc.table()
+
 ```
 
